--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    
   </head>
   <body>
     <div class="container">
@@ -406,7 +407,7 @@
     <div class="zcxzxzx">
       <div class="uyyuyu">
         <img
-          style="margin-top: 80px; margin-left: 160px"
+          style="margin-top: 80px; "
           src="./images/pad.png"
           alt=""
         />
@@ -425,7 +426,7 @@
       </div>
     </div>
 
-    <div style="margin-left: 30px;" >
+    <div style="margin-left: 80px;" >
       
 <div class="">
       <div class="sdz">
